syntax = "proto3";

service Ping {
    rpc Hello (HelloReqest) returns (HelloResponse) {
    }
}

message HelloReqest {
    string toMessage = 1;
}

message HelloResponse {
    string resMessage = 1;
}